<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.tangcan0823.mintia_omiyagego.MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_okashi"
            android:icon="@drawable/ic_food"
            android:title="@string/navigation_okashi" />
        <item
            android:id="@+id/navigation_item_osake"
            android:icon="@drawable/ic_osake"
            android:title="@string/navigation_osake" />
        <item
            android:id="@+id/navigation_item_kougehin"
            android:icon="@drawable/ic_kougeihin"
            android:title="@string/navigation_kougehin" />

        <item
            android:id="@+id/navigation_item_about"
            android:icon="@drawable/ic_contact"
            android:title="@string/navigation_about" />
    </group>
</menu>